<resources>
    <string name="app_name">HikeScape</string>
    <string name="home">Inicio</string>
    <string name="settings">Favoritas</string>
    <string name="about">Rutas</string>
    <string name="logout">Buscar</string>
    <string name="profile">Perfil</string>

    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string-array name="difficulty_levels">
        <item>Fácil</item>
        <item>Medio</item>
        <item>Difícil</item>
        <item>Muy Difícil</item>
    </string-array>
    <style name="CircularImage" parent="ShapeAppearance.MaterialComponents.SmallComponent">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">50%</item> <!-- Hace la imagen perfectamente circular -->
    </style>
    <string name="profile_image">Imagen de perfil</string>
    <string name="location_icon">Icono de ubicación</string>
    <string name="dificultad">Dificultad</string>

</resources>