<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/buttonHome"
        android:icon="@drawable/casa"
        android:title="@string/home"
        android:orderInCategory="1" />
    <item
        android:id="@+id/buttonRutafav"
        android:icon="@drawable/estrella"
        android:title="@string/settings"
        android:orderInCategory="2" />
    <item
        android:id="@+id/buttonRuta"
        android:icon="@drawable/mas"
        android:title="@string/about"
        android:orderInCategory="3" />
    <item
        android:id="@+id/buttonBuscar"
        android:icon="@drawable/lupa"
        android:title="@string/logout"
        android:orderInCategory="4" />
    <item
        android:id="@+id/buttonProfile"
        android:icon="@drawable/perfilsinfondo"
        android:title="@string/profile"
        android:orderInCategory="5" />
</menu>
